Gerando um Scaffolding para gerar CRUD automaticamente

--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-9b2573a2-5448-46ed-86af-52a19cca9daf;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
